--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -20,11 +20,12 @@ jobs:
           package-name: "@netlify/@netlify/zip-it-and-ship-it"
       - uses: actions/checkout@v3
         if: ${{ steps.release.outputs.release_created }}
+      - run:
+          curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+        if: ${{ steps.release.outputs.release_created }}
       - uses: actions/setup-node@v3
         with:
           node-version: "*"
-          cache: "npm"
-          check-latest: true
           registry-url: "https://registry.npmjs.org"
         if: ${{ steps.release.outputs.release_created }}
       - run: wasm-pack build --target nodejs --release
