--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "elf-cam"
+name = "binary-info"
 version = "0.1.1"
 authors = ["David Calavera <david.calavera@gmail.com>"]
 edition = "2018"
-repository = "https://github.com/netlify/elf-cam"
+repository = "https://github.com/netlify/binary-info"
 license = "Apache 2"
-description = "elf-cam is a WebAssembly(WASM) module to extract very specific information from binary files built for Linux, also known as ELF files."
+description = "binary-info is a WebAssembly(WASM) module to extract very specific information from binary files."
 
 [lib]
 crate-type = ["cdylib", "rlib"]
